rename scripts to "[package]_run.sh" & tweak animation change falafel's package.json from web to falafel fix container width making h1 wrap
I like middle-eastern food

--- a/packages/falafel/src/styles/app.css
+++ b/packages/falafel/src/styles/app.css
@@ -60,7 +60,7 @@ body {
 .app>.container {
     grid-row: 1;
     grid-column: 1;
-    width: min(clamp(200px, 40ch, 600px), 100%);
+    min-width: min(clamp(200px, 40ch, 600px), 100%);
 }
 
 .flex {
@@ -69,6 +69,7 @@ body {
 
 .heading {
     font: var(--font-heading);
+    white-space: nowrap;
 }
 
 .subheading,
